# kodsnack_advent_of_code

./: .gitmodules  LICENSE  README.md
2024/: README.md
2024/Dyr-El-elixir/day2024_01/: .gitignore  README.md  mix.exs
2024/Dyr-El-python/: aoc_prepare.py  d2024_01.py  d2024_02.py  d2024_03.py  d2024_04.py  d2024_05.py  d2024_06.py  d2024_07.py  d2024_08.py  d2024_09.py  d2024_10.py  d2024_11.py  d2024_12.py  d2024_13.py  d2024_14.py  d2024_15.py  d2024_16.py  d2024_17.py  d2024_18.py  d2024_19.py  d2024_20.py  d2024_21.py  d2024_22.py  d2024_23.py  d2024_24.py  d2024_25.py  d_template.py
2024/Dyr-El-python/tests/: test_aoc_prepare.py
2024/Dyr-El-python/utils/: parse.py
2024/Dyr-El-rust/: .gitignore
2024/Dyr-El-rust/day2024_01/: Cargo.toml
2024/Mikael-Eklund-Python/: .gitignore  README.md  main.py
2024/fronkan-python/: .gitignore  aoc_create.py  pyproject.toml
2024/fronkan-python/day01/: solution.py  test_day1.py
2024/fronkan-python/day02/: solution.py  test_day2.py
2024/fronkan-python/day03/: solution.py  test_day3.py
2024/fronkan-python/libs/aoc_lib/: pyproject.toml
2024/fronkan-python/libs/aoc_lib/aoc_lib/: manhattan.py  maths.py  np_grid.py
2024/korsback-python/: .gitignore  README.md  helpers.py  main.py  template.py
2024/korsback-python/days/: day01.py  (+4 more)
2024/linco95-typescript/: deno.json
2024/loke-kap/: README.md  part01.kap  part02.kap  part03.kap
2024/lyxell-sqlite/: 01_01.sql  01_02.sql  01_data.csv  02_01.sql  02_02.sql  02_data.csv  03_01.sql  03_02.sql  README
2024/meconer-ocaml/: .gitignore  aoc2024.opam  dune-project
(+31 files in other folders)
