[project]
name = "fronkan-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aoc_lib",
]

[tool.uv.sources]
aoc_lib = { workspace = true }

[tool.uv.workspace]
members = ["libs/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
